gcc/testsuite/g++.dg/eh/catch2.C
// PR c++/28250
// { dg-do compile }

void foo()
{
  try {}
  catch () {}  // { dg-error "before" }
  catch (...) {}
}
